crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__inheritance__inherit_from_number.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/inherit_from_number.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only classes can be inherited from, but `123` is of type `Number`
   ╭─[craftinginterpreters/test/inheritance/inherit_from_number.lox:2:13]
   │
 2 │ class Foo < Number {} // expect runtime error: Superclass must be a class.
   │             ──────  
───╯
