crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__inheritance__parenthesized_superclass.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/parenthesized_superclass.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `(`: expected Identifier
   ╭─[craftinginterpreters/test/inheritance/parenthesized_superclass.lox:4:13]
   │
 4 │ class Bar < (Foo) {}
   │             ─  
───╯
