crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__inheritance__set_fields_from_base_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/set_fields_from_base_class.lox
---
success: true
exit_code: 0
----- stdout -----
foo 1
foo 2
bar 1
bar 2
bar 1
bar 2

----- stderr -----
